# UrbanSolarCarver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  setup_env.py
configs/: REFERENCE_all_options.yaml  config_benefit.yaml  config_daylight.yaml  config_irradiance.yaml  config_radiative_cooling.yaml  config_tilted_plane.yaml  config_time_based.yaml  user_config.yaml
docs/: grasshopper.md  index.md  modes.md  project-map.md
docs/api/: carving.md  cli.md  config.md  daemon.md  grid.md  index.md  io.md  pipeline.md  raytracer.md  scoring.md  session.md  sky-patches.md  sun.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
examples/: 1_quick_start.ipynb  2_solar_envelope.ipynb  4_advanced.ipynb  USC_components_for_grasshopper.gh  USC_components_for_grasshopper.ghx
examples/test_inputs/basic_perimeter_block/: maxVolume.ply  testSrfs.ply
examples/test_inputs/full_blocks/: maxVolume.ply  (+1 more)
grasshopper/USC_GHplugin/: USC Analysis Period.ghuser  USC Benefit Params.ghuser  USC Config.ghuser  USC Diagnostics.ghuser  USC EPW Path.ghuser  USC Export.ghuser  USC Grid Settings.ghuser  USC Mode.ghuser  USC Postprocess.ghuser  USC Preprocess.ghuser  USC Radiative Cooling.ghuser  USC Ray Settings.ghuser  USC Run Pipeline.ghuser  USC Session.ghuser  USC Threshold Stage.ghuser  USC Threshold.ghuser  USC Tilted Plane.ghuser
grasshopper/components/: USC_AnalysisPeriod.py  USC_BenefitParams.py  USC_Config.py  USC_Diagnostics.py  USC_EPW.py  USC_Export.py  USC_GridSettings.py  USC_Mode.py  USC_Postprocess.py  USC_Preprocess.py  USC_RadCooling.py  USC_RaySettings.py  USC_RunPipeline.py  USC_Session.py  USC_Threshold.py  USC_ThresholdStage.py  USC_TiltedPlane.py
src/urbansolarcarver/: __init__.py  api.py  carver_cli.py  carving.py  daemon.py  grid.py  io.py  load_config.py  mode_registry.py  pydantic_schemas.py  raytracer.py  scoring.py  session.py  sky_patches.py  sun.py
tests/: conftest.py  test_carve_above.py  test_cli.py  test_exporting.py  test_grid.py  test_modes.py  test_pipeline.py  test_preprocessing.py  test_raytracer.py  test_schemas.py  test_scoring.py  test_session.py  test_util.py
(+14 files in other folders)
